--- a/game.html
+++ b/game.html
@@ -2,6 +2,6 @@
 <!-- https://gist.github.com/xem/a7ff7215375520d89b73beeabd7b16bd -->
 <!-- https://www.emanueleferonato.com/2014/01/17/creation-of-an-html5-tile-based-platform-game-with-no-engines-behind-pure-code/ -->
 
-<body style=margin:0>
+<body style="margin:0;">
     <canvas id=a>
         <script src="game.js"></script>
