--- a/game.html
+++ b/game.html
@@ -1,4 +1,5 @@
-
 <body style="margin:0;">
     <canvas id=a>
+        <script src="zzfx.js"></script>
+        <script src="zzfxm.min.js"></script>
         <script src="game.js"></script>
