Made levels harder

--- a/game.html
+++ b/game.html
@@ -1,3 +1,4 @@
+<head><meta name="monetization" content="$ilp.uphold.com/2Jen2dyhU7B2"></head>
 <body style="margin:0;">
     <canvas id=a>
         <script src="zzfx.js"></script>
